# geoloc-imc-2023

./: .env.example  .gitignore  3a_3b_results_analysis.py  README.md  default.py  density.py  install.sh  logger.py  pyproject.toml  tata.ipynb  tata.py
analysis/: analysis.py  create_files_for_analysis.ipynb  geo_databases.py  million_scale.ipynb  million_scale.py  plot.ipynb  plot.py  ripe_atlas_probes_bias.ipynb  round_algorithm.py  tables.ipynb
clickhouse/: init-db.sh
datasets/: anchors.pickle  countries.pickle  countries.txt  create_datasets.ipynb  get_population.ipynb  iris_ping_probing.csv  probes.pickle  probes_atlas.pickle  raw_probe_atlas.pickle  responsive_probe_atlas.pickle  target_anchors.pickle  vp_anchors.pickle
geoloc_imc_2023/: atlas_probing.py  cbg.py  default.py  draw_results.py  filter_probe_atlas.py  helpers.py  iris_probing.py  measurement_utils.py  measurements.py  query_api.py
measurements/: anchor_measurements.ipynb  landmark_traceroutes.ipynb  million_scale.ipynb  million_scale_measurements.ipynb  million_scale_measurements.py  probe_and_anchor_measurements.ipynb  probe_measurements.ipynb  test_v2.py
measurements_metadata/: 779b2c59-8322-461d-893f-e83ce4460d64.json  7e273b92-04e3-44e3-946f-3337f9e38637.json  b59a0873-574d-46bd-81c8-860ba3733be4.json
notebooks/: analysis.ipynb  anchor_analysis.ipynb  anchor_measurements.ipynb  anchor_prefix_probe_vp_analysis.ipynb  anchor_probes_analysis.ipynb  anchor_target_anchor_vp_analysis.ipynb  anchor_target_probe_vp_analysis.ipynb  cbg_measurements.ipynb  cbg_validation.ipynb  debugging.ipynb  get_anchors_dataset.ipynb  get_datasets.ipynb  measurement.ipynb  probe_measurements.ipynb  probes_filtering.ipynb  target_hitlist.ipynb  test_measurement.ipynb
plot/: plot.ipynb
replicability/: analysis.py  common.py  geo_databases.py  globals.py  plot.py  ripe_utils.py  round_algorithm.py
results/: all_anchors_to_all_anchors.pickle  all_anchors_to_all_anchors_test.pickle  init_measurement.pickle  (+7 more)
(+130 files in other folders)
