[tool.poetry]
name = "review"
version = "0.1.0"
description = ""
authors = ["Danaelmilo <milo2.dreyfus@gmail.com>"]
readme = "README.md"
packages = [
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.3"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
plotly = "^5.14.0"
seaborn = "^0.12.1"
requests = "^2.28.1"
clickhouse-driver = "^0.2.6"
scipy = "^1.11.1"
overpy = "^0.6"
dnspython = "^2.4.1"
geopy = "^2.3.0"
ujson = "^5.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"