[tool.poetry]
name = "geoscale"
version = "1.0"
description = "Geolocation reproduction paper"
authors = ["Danaelmilo <milo2.dreyfus@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
requests = "^2.17.0"
clickhouse-driver = "^0.2.6"
overpy = "^0.6"
dnspython = "^2.4.1"
geopy = "^2.3.0"
ujson = "^5.8.0"
scipy = "^1.5.0"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
py-radix = "^0.10.0"
pyasn = "^1.6.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"